# cmake_demo

./: CMakeLists.txt  args.txt  build.sh  shell.sh
add/: add.cpp  add.h
add1/: CMakeLists.txt  add1.cpp  add1.h
add2/: CMakeLists.txt  add2.cpp  add2.h
curl-example/: CMakeLists.txt  curl-example.c
demo/: CMakeLists.txt  main.cpp
