cmake_minimum_required(VERSION 3.14)

#SET (SRC_LIST helloworld.c)
MESSAGE (STATUS "project binary dir: " ${PROJECT_BINARY_DIR})
MESSAGE (STATUS "project source dir: " ${PROJECT_SOURCE_DIR})
#ADD_EXECUTABLE(hello ${SRC_LIST})
MESSAGE (STATUS "executable output path: " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE (STATUS "library output path: " ${LIBRARY_OUTPUT_PATH})
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/test/bin)
#SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/test/lib)
ADD_SUBDIRECTORY(add2 add2) 
ADD_SUBDIRECTORY(add1 add1) 
ADD_SUBDIRECTORY(add add) 
ADD_SUBDIRECTORY(demo demo) 

#INSTALL(TARGETS add2 add1
#    RUNTIME DESTINATION bin
#    LIBRARY DESTINATION lib
#    ARCHIVE DESTINATION libstatic
#    )
INSTALL(DIRECTORY doc DESTINATION share
    PATTERN "private"   EXCLUDE
    PERMISSIONS OWNER_WRITE OWNER_READ
                GROUP_WRITE GROUP_READ)
#INSTALL(DIRECTORY doc DESTINATION share/hello)
INSTALL(FILES README COPYRIGHT DESTINATION ${CMAKE_INSTALL_PREFIX})
    #    RENAME  readme COPYRIGHT)
