cmake_minimum_required(VERSION 3.14)

#SET (SRC_LIST helloworld.c)
MESSAGE (STATUS "project binary dir: " ${PROJECT_BINARY_DIR})
MESSAGE (STATUS "project source dir: " ${PROJECT_SOURCE_DIR})
MESSAGE (STATUS "cmake_prefix_path: " ${CMAKE_PREFIX_PATH})
MESSAGE (STATUS "cmake_include_path: " ${CMAKE_INCLUDE_PATH})
MESSAGE (STATUS "cmake_framework_path: " ${CMAKE_FRAMEWORK_PATH})
MESSAGE (STATUS "cmake_prefix_path: " ${CMAKE_PREFIX_PATH})
MESSAGE (STATUS "cmake_system_library_path: " ${CMAKE_SYSTEM_LIBRARY_PATH})
MESSAGE (STATUS "cmake_system_framework_path: " ${CMAKE_SYSTEM_FRAMEWORK_PATH})
MESSAGE (STATUS "cmake_find_root_path: " ${CMAKE_FIND_ROOT_PATH})
MESSAGE (STATUS "cmake_find_root_path_mode_library: " ${CMAKE_FIND_ROOT_PATH_MODE_LIBRARY})
#ADD_EXECUTABLE(hello ${SRC_LIST})
MESSAGE (STATUS "executable output path: " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE (STATUS "library output path: " ${LIBRARY_OUTPUT_PATH})
MESSAGE(STATUS"cmake_current_list_file:"${CMAKE_CURRENT_LIST_FILE})
MESSAGE(STATUS"cmake_current_list_line:"${CMAKE_CURRENT_LIST_LINE})
MESSAGE(STATUS"cmake_module_path:"${CMAKE_MODULE_PATH})
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/test/bin)
#SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/test/lib)
ADD_SUBDIRECTORY(add2 add2) 
ADD_SUBDIRECTORY(add1 add1) 
ADD_SUBDIRECTORY(add add) 
ADD_SUBDIRECTORY(demo demo) 

#INSTALL(TARGETS add2 add1
#    RUNTIME DESTINATION bin
#    LIBRARY DESTINATION lib
#    ARCHIVE DESTINATION libstatic
#    )
INSTALL(DIRECTORY doc DESTINATION share
    PATTERN "private"   EXCLUDE
    PERMISSIONS OWNER_WRITE OWNER_READ
                GROUP_WRITE GROUP_READ)
#INSTALL(DIRECTORY doc DESTINATION share/hello)
INSTALL(FILES README COPYRIGHT DESTINATION ${CMAKE_INSTALL_PREFIX})
    #    RENAME  readme COPYRIGHT)
