PROJECT(add2)
SET(src_list add2.cpp)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${src_list})
SET_TARGET_PROPERTIES(add2 PROPERTIES VERSION 1.2 SOVERSION 1)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC add2)

ADD_LIBRARY(add2_static STATIC ${src_list})
SET_TARGET_PROPERTIES(add2_static PROPERTIES OUTPUT_NAME "add2")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC add2)

GET_TARGET_PROPERTY(OUTPUT_VALUE add2_static OUTPUT_NAME) 
MESSAGE(STATUS "add2_static OUTPUT_NAME: " ${OUTPUT_VALUE} "\n")

INSTALL(FILES add2.h DESTINATION include)
