PROJECT(main)
MESSAGE(STATUS "project_name: " ${PROJECT_NAME})

#SET(src_list add1.cpp)
FILE(GLOB_RECURSE src_list ${PROJECT_SOURCE_DIR} *.cpp *.c)
MESSAGE(STATUS "global collect files: " ${PROJECT_SOURCE_DIR})
ADD_EXECUTABLE(${PROJECT_NAME} ${src_list})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../add2 ${PROJECT_SOURCE_DIR}/../add1 ${PROJECT_SOURCE_DIR}/../add)
#TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC add1)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} add add1 add2)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
